--- a/src/DispFormat.css
+++ b/src/DispFormat.css
@@ -1,8 +1,8 @@
 .ResultsRendercontainer {
   margin-top: 0px;
-  background-color: rgb(238, 241, 210);
+  background-color: rgb(232, 235, 211);
   position: relative;
-  width: 1000px;
+  width: 1015px;
   margin-left: 10px;
 }
 
@@ -12,9 +12,9 @@
   margin-right: auto;
   margin-top: 15px;
   border-radius: 10px 10px 10px 10px;
-  background-color: rgba(23, 235, 76, 0.918);
+  background-color: rgba(169, 204, 177, 0.918);
   top: -10px;
-  width: 980px;
+  width: 1000px;
 }
 .search-result-item-rec {
   height: 180px;
@@ -22,15 +22,15 @@
   margin-right: auto;
   margin-top: 15px;
   border-radius: 10px 10px 10px 10px;
-  background-color: rgba(240, 111, 190, 0.918);
+  background-color: rgba(221, 174, 203, 0.918);
   top: -10px;
-  width: 980px;
+  width: 1000px;
 }
 
 .search-results-count {
   margin-top: 30px;
   text-align: center;
-  background-color: rgb(223, 84, 84);
+  background-color: rgb(231, 153, 153);
 }
 @media (min-width: 768px) {
   .search-result-item .image-link {
@@ -86,25 +86,24 @@
 
 @media (min-width: 768px) {
   .search-result-item-body-r {
-    height: 270px;
-    background-color: black;
+    height: 270px; /*
+    background-color: rgb(231, 114, 114);*/
     margin-left: 600px;
   }
 }
 
 .display-result-col {
   height: 180px;
-  width: 550px;
-  max-height: 100%;
-  /* background-color: rgb(247, 2, 2);
-  */
+  width: 520px;
+  max-height: 100%; /*
+  background-color: rgb(236, 70, 70);*/
   text-align: left;
-  margin-left: 0px;
+  margin-left: 15px;
 }
 
 .search-result-heading {
-  /* background-color: burlywood;
-  */
+  /*background-color: burlywood;*/
+
   font-size: 35px;
   display: inline-block;
 }
@@ -116,11 +115,10 @@
 }
 
 .search-result-info {
-  max-height: 100%;
-  /* background-color: rgb(12, 12, 228);
-  */
+  max-height: 100%; /*
+  background-color: rgb(12, 12, 228);*/
   margin-left: -15px;
-  width: 550px;
+  width: 520px;
   height: 130px;
 }
 
@@ -219,10 +217,10 @@
 
 .info-sec-col {
   height: 180px;
-  width: 235px;
-  max-height: 100%;
-  /* background-color: rgb(7, 0, 0);
-  */
+  width: 265px;
+  max-height: 100%; /*
+  background-color: rgb(7, 0, 0);*/
+
   text-align: right;
 }
 .info-sec-col .price {
@@ -233,19 +231,22 @@
 
 .info-sec-col .buttons {
   position: relative;
-  top: 95px;
-  /*background-color: rgb(240, 10, 163);*/
+  top: 85px; /*
+  background-color: rgb(240, 10, 163);
+  */
   text-align: right;
-  margin-right: -10px;
+  margin-left: -40px;
+  width: 295px;
 }
 .info-sec-col .Go {
-  margin-right: 5px;
+  margin-right: 7px;
 }
 .info-sec-col .Add {
   margin-right: 7px;
+  margin-left: 7px;
 }
 .from {
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .actualprice {
