upadate search results redirecrion

--- a/src/DispFormat.css
+++ b/src/DispFormat.css
@@ -252,3 +252,10 @@
 .actualprice {
   font-size: 25px;
 }
+
+#ttt span::after {
+  content: ", ";
+}
+#ttt span:last-child::after {
+  content: "  ";
+} /* empty string */
