--- a/src/DispFormat.css
+++ b/src/DispFormat.css
@@ -1,5 +1,4 @@
 .ResultsRendercontainer {
-  background-color: rgb(232, 235, 211);
   max-height: 100%;
   max-width: 100%;
 }
@@ -21,7 +20,6 @@
 
 .search-results-count {
   text-align: center;
-  background-color: rgb(231, 153, 153);
 }
 
 .search-result-item + .search-result-item {
@@ -54,7 +52,7 @@
   position: absolute;
   right: 15px;
   top: 25px;
-  background: rgb(235, 128, 128);
+  background: rgb(99, 170, 78);
   text-align: center;
   border-radius: 60px 60px 60px 60px;
   color: white;
@@ -117,21 +115,19 @@
   text-align: center;
 }
 
-.buttons {
-  position: relative;
-  top: 0px;
-  text-align: center;
-}
-
 .Add {
-  margin-left: -7px;
+  margin-left: -10px;
 }
 .from {
-  font-size: 30px;
+  font-size: 35px;
+  font-weight: 500;
+  text-align: right;
 }
 
 .actualprice {
-  font-size: 25px;
+  font-size: 40px;
+  font-weight: bolder;
+  text-align: right;
 }
 
 #ttt span::after {
@@ -142,13 +138,14 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  height: 190px;
+  height: 170px;
   max-height: 100%;
   max-width: 100%;
 }
 
 .flex-col--end {
   align-self: flex-end;
+  margin-bottom: 10px;
 }
 .flex-col {
   /*
